// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

generator custom_generator {
  provider = "prisma-generator-fake-data"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

enum UserRole {
  OWNER
  MANAGER
  CASHIER
  WORKER
  UNKNOW
}

enum StaffStatus {
  ACTIVE
  INACTIVE
}

enum CatProduct {
  ELECTRO
  DRINK
  FOOD
  FASHION
  STATIONERY
}

enum PaymentMethod {
  CASH
  UPI
  CARD
  CREDIT
  ONLINE
}

enum PaymentStatus {
  PAID
  PENDING
  PARTIAL
}

enum TaxMode {
  GST
  VAT
  SALES_TAX
  TAX
  NONE
}

enum InventoryMovementType {
  SALE
  RESTOCK
  RETURN
  ADJUSTMENT
}

enum ReturnStatus {
  PARTIAL
  RETURNED
}

enum SubscriptionStatus {
  TRIAL
  ACTIVE
  EXPIRED
  SUSPENDED
}

model User {
  id            String    @id @default(cuid())
  name          String
  username      String
  email         String?   @unique
  emailVerified DateTime?
  image         String?
  password      String?
  role          UserRole  @default(UNKNOW)
}

model ProductStock {
  id           String     @id @unique
  businessId   String?
  name         String
  imageProduct String?
  price        Float
  stock        Float
  cat          CatProduct

  business  Business?           @relation(fields: [businessId], references: [id], onDelete: SetNull)
  Product   Product[]
  movements InventoryMovement[]

  @@index([businessId])
}

model Product {
  id            String          @id @default(cuid())
  productId     String
  productstock  ProductStock    @relation(fields: [productId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  sellprice     Float
  OnSaleProduct OnSaleProduct[]

  @@unique([productId])
}

model OnSaleProduct {
  id            String       @id @default(cuid())
  productId     String?
  quantity      Int
  saledate      DateTime     @default(now())
  transactionId String
  productName   String       @default("")
  unitPrice     Float        @default(0)
  costPrice     Float        @default(0)
  taxRate       Float        @default(0)
  lineSubtotal  Float        @default(0)
  taxAmount     Float        @default(0)
  lineTotal     Float        @default(0)
  product       Product?     @relation(fields: [productId], references: [productId], onDelete: SetNull, onUpdate: Cascade)
  transaction   Transaction  @relation(fields: [transactionId], references: [id], onDelete: Cascade)
  returnItems   ReturnItem[]

  @@index([productId, transactionId])
}

model Transaction {
  id              String          @id @default(cuid())
  businessId      String?
  billNumber      String?         @unique
  customerName    String?
  customerPhone   String?
  customerEmail   String?
  customerAddress String?
  customerTaxId   String?
  customerId      String?
  subtotal        Decimal         @default(0)
  discount        Decimal         @default(0)
  taxAmount       Decimal         @default(0)
  totalAmount     Decimal?        @default(0)
  amountReceived  Decimal         @default(0)
  changeAmount    Decimal         @default(0)
  paymentMethod   PaymentMethod?
  paymentStatus   PaymentStatus   @default(PENDING)
  createdAt       DateTime        @default(now())
  completedAt     DateTime?
  isComplete      Boolean         @default(false)
  products        OnSaleProduct[]
  business        Business?       @relation(fields: [businessId], references: [id], onDelete: SetNull)
  customer        Customer?       @relation(fields: [customerId], references: [id], onDelete: SetNull)
  returns         SaleReturn[]
  returnStatus    ReturnStatus?
  refundedAmount  Decimal         @default(0)

  @@index([businessId])
  @@index([customerId])
}

model Customer {
  id           String        @id @default(cuid())
  businessId   String?
  name         String
  phone        String
  email        String?
  address      String?
  taxId        String?
  country      String?
  notes        String?
  isActive     Boolean       @default(true)
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  business     Business?     @relation(fields: [businessId], references: [id], onDelete: SetNull)
  transactions Transaction[]

  @@index([businessId])
  @@index([name])
  @@index([phone])
  @@index([email])
  @@index([taxId])
}

model InventoryMovement {
  id                  String                @id @default(cuid())
  businessId          String?
  productId           String?
  productNameSnapshot String
  movementType        InventoryMovementType
  quantityChange      Float
  previousStock       Float
  newStock            Float
  referenceType       String?
  referenceId         String?
  referenceBillNumber String?
  reason              String?
  createdAt           DateTime              @default(now())
  business            Business?             @relation(fields: [businessId], references: [id], onDelete: SetNull)
  product             ProductStock?         @relation(fields: [productId], references: [id], onDelete: SetNull)

  @@index([businessId, createdAt])
  @@index([productId, createdAt])
  @@index([referenceId])
}

model SaleReturn {
  id                    String        @id @default(cuid())
  businessId            String?
  originalTransactionId String
  originalBillNumber    String
  refundAmount          Decimal
  refundMethod          PaymentMethod
  reason                String
  status                ReturnStatus
  createdAt             DateTime      @default(now())
  business              Business?     @relation(fields: [businessId], references: [id], onDelete: SetNull)
  transaction           Transaction   @relation(fields: [originalTransactionId], references: [id], onDelete: Restrict)
  items                 ReturnItem[]

  @@index([businessId])
  @@index([originalTransactionId])
}

model ReturnItem {
  id              String        @id @default(cuid())
  saleReturnId    String
  onSaleProductId String
  productId       String?
  productName     String
  quantity        Int
  unitRefund      Decimal
  refundAmount    Decimal
  saleReturn      SaleReturn    @relation(fields: [saleReturnId], references: [id], onDelete: Cascade)
  saleLine        OnSaleProduct @relation(fields: [onSaleProductId], references: [id], onDelete: Restrict)

  @@index([onSaleProductId])
}

model ShopData {
  id                  String    @id @default(cuid())
  businessId          String?
  tax                 Float?    @default(0)
  name                String?   @default("Vernex Demo Shop")
  country             String    @default("India")
  currency            String    @default("INR")
  taxMode             TaxMode   @default(GST)
  phone               String?
  address             String?
  taxId               String?
  receiptFooter       String?   @default("Thank you for your business!")
  billPrefix          String    @default("VNX")
  billPadding         Int       @default(6)
  showBusinessLogo    Boolean   @default(true)
  showTaxId           Boolean   @default(true)
  showCustomerDetails Boolean   @default(true)
  showItemTax         Boolean   @default(true)
  showFooter          Boolean   @default(true)
  receiptSize         String    @default("80mm")
  business            Business? @relation(fields: [businessId], references: [id], onDelete: SetNull)

  @@index([businessId])
}

model BillSequence {
  id         String    @id @default("main")
  businessId String?
  nextNumber Int       @default(1)
  business   Business? @relation(fields: [businessId], references: [id], onDelete: SetNull)

  @@index([businessId])
}

model Business {
  id                 String              @id @default(cuid())
  name               String
  country            String              @default("India")
  currency           String              @default("INR")
  taxMode            TaxMode             @default(GST)
  ownerUserId        String
  trialStartedAt     DateTime            @default(now())
  trialEndsAt        DateTime?
  subscriptionStatus SubscriptionStatus  @default(TRIAL)
  planName           String              @default("Free Trial")
  activatedAt        DateTime?
  suspendedAt        DateTime?
  createdAt          DateTime            @default(now())
  updatedAt          DateTime            @updatedAt
  products           ProductStock[]
  customers          Customer[]
  transactions       Transaction[]
  returns            SaleReturn[]
  inventoryMovements InventoryMovement[]
  shopData           ShopData[]
  billSequences      BillSequence[]
  staff              StaffProfile[]
  auditLogs          AuditLog[]

  @@index([ownerUserId])
}

model StaffProfile {
  id          String      @id @default(cuid())
  authUserId  String      @unique
  businessId  String
  name        String
  email       String      @unique
  phone       String?
  role        UserRole    @default(CASHIER)
  status      StaffStatus @default(ACTIVE)
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
  lastLoginAt DateTime?
  business    Business    @relation(fields: [businessId], references: [id], onDelete: Cascade)
  auditLogs   AuditLog[]

  @@index([businessId])
  @@index([role])
  @@index([status])
}

model AuditLog {
  id               String        @id @default(cuid())
  businessId       String
  userId           String?
  userNameSnapshot String
  roleSnapshot     UserRole
  action           String
  entityType       String
  entityId         String?
  referenceNumber  String?
  description      String
  metadata         Json?
  createdAt        DateTime      @default(now())
  business         Business      @relation(fields: [businessId], references: [id], onDelete: Cascade)
  staff            StaffProfile? @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([businessId, createdAt])
  @@index([action])
}
